--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head th:fragment="head(title)">
     <!-- Required meta tags -->
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="starter-template.css" th:href="@{/starter-template.css}" rel="stylesheet">
+    <link href="starter-template.css" th:href="@{/css/starter-template.css}" rel="stylesheet">
 
     <title th:text="${title}">Hello, Spring Boot!</title>
 </head>
@@ -24,7 +24,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav me-auto">
                 <li class="nav-item" th:classappend="${menu} == 'home' ? 'active'">
                     <a class="nav-link" href="#" th:href="@{/}">홈
                         <span class="sr-only" th:if="${menu} == 'home'">(current)</span></a>
@@ -46,10 +46,18 @@
                     </div>
                 </li> -->
             </ul>
-            <!-- <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-            </form> -->
+
+            <a class="btn btn-secondary my-2 me-2 my-sm-0" th:href="@{/account/login}"
+                sec:authorize="!isAuthenticated()">로그인</a>
+            <a class="btn btn-secondary my-2 my-sm-0" th:href="@{/account/register}"
+                sec:authorize="!isAuthenticated()">회원가입</a>
+            <form class="form-inline my-2 my-lg-0" th:action="@{/logout}" th:method="post"
+                sec:authorize="isAuthenticated()">
+                <!-- <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"> -->
+                <span class="text-white" sec:authentication="name">사용자</span>
+                <span class="text-white mx-2" sec:authentication="principal.authorities">권한</span>
+                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Logout</button>
+            </form>
         </div>
     </nav>
 </body>
