--- a/src/main/resources/templates/board/form.html
+++ b/src/main/resources/templates/board/form.html
@@ -42,6 +42,8 @@
             </div>
             <div class="text-right">
                 <a class="btn btn-primary" th:href="@{/board/list}">취소</a>
+                <button type="button" class="btn btn-primary" th:onclick="|deleteBoard(*{id})|"
+                    sec:authorize="hasRole('ROLE_ADMIN')">삭제</button>
                 <button type="submit" class="btn btn-primary">확인</button>
             </div>
         </form>
@@ -50,18 +52,25 @@
 
 
 
-    <!-- Optional JavaScript; choose one of the two! -->
+    <footer th:replace="fragments/common :: footer" />
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <script>
+        function deleteBoard(id) {
+            //DELETE /api/boards/{id}
+            $.ajax({
+                url: '/api/boards/' + id,
+                type: 'DELETE',
+                success: function (result) {
+                    console.log('result', result);
+                    alert('삭제됐습니다.');
+                    window.location.href = '/board/list';
+                }
+            });
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
+        }
+
+    </script>
+
 </body>
 
 </html>
